--- a/style/style.css
+++ b/style/style.css
@@ -6,12 +6,13 @@ body{
 
 header{
     margin: 0px;
-    padding: 5px;
+    padding: 5px 25%;
     background-image: url(https://images.pexels.com/photos/8593815/pexels-photo-8593815.jpeg?auto=compress&cs=tinysrgb&h=650&w=940);
     background-repeat:round;
-    /*display: flex;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;*/
+    
 }
 .Contenedor{
     display: flex;
